--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-native": "0.73.6",
     "react-native-btr": "^2.2.1",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-date-picker": "^5.0.0",
     "react-native-device-info": "^10.13.1",
     "react-native-document-picker": "^9.1.1",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.2.3",
@@ -35,10 +37,12 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
