--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -31,6 +32,7 @@
     "react-native-device-info": "^10.13.1",
     "react-native-document-picker": "^9.1.1",
     "react-native-element-dropdown": "^2.10.4",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
@@ -42,6 +44,7 @@
     "react-native-screens": "^3.30.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
