--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.8.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-step-indicator": "^1.0.3",
