--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -35,6 +36,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
@@ -43,6 +45,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.1.0",
     "react-native-tab-view": "^3.5.2",
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
