--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,9 @@ dependencies {
 
     implementation project(':react-native-vector-icons')
 
+    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    implementation 'com.google.firebase:firebase-analytics'
+
       // For animated GIF support
     implementation 'com.facebook.fresco:fresco:3.1.3'
     // implementation 'com.facebook.fresco:animated-gif:2.6.0'
@@ -154,3 +157,4 @@ dependencies {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+apply plugin: 'com.google.gms.google-services'
