--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
-
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -26,16 +27,24 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
-            <category android:name="android.intent.category.LAUNCHER" />
-            <action android:name="android.intent.action.VIEW" />
+            <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
         </intent-filter>
         <intent-filter>
             <data android:mimeType="application/pdf" />
         </intent-filter>
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <data android:scheme="fobes" />
+        </intent-filter>
       </activity>
+      <receiver
+          android:name=".MyBroadcastReceiver"
+          android:exported="true">
+          <intent-filter>
+              <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+          </intent-filter>
+      </receiver>
     </application>
 </manifest>
