--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "uri-scheme": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
