--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <category android:name="android.intent.category.BROWSABLE" />
         <data android:scheme="http" />
         <data android:scheme="https" />
-        <data android:host="fobes.in" android:pathPrefix="/job" />
+        <data android:host="fobes.in" android:pathPrefix="/jobs" />
       </intent-filter>
       <intent-filter>
         <data android:mimeType="application/pdf" />
