--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-firebase/analytics": "^20.1.0",
+    "@react-native-firebase/app": "^20.1.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
